[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mythril"
dynamic = ["version"]
description = "Security analysis tool for Ethereum smart contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ConsenSys Dilligence" }]
keywords = ["hacking", "disassembler", "security", "ethereum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Disassemblers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "blake2b-py",
    "coloredlogs>=10.0",
    "coincurve>=13.0.0",
    "cytoolz>=0.12.0",
    "asn1crypto>=0.22.0",
    "configparser>=3.5.0",
    "py_ecc<5.0.0,>=1.4.7",
    "eth-abi>=4.0.0,<5.0.0",
    "eth-account>=0.8.0",
    "ethereum-input-decoder>=0.2.2",
    "eth-hash<0.4.0,>=0.3.1",
    "eth-keyfile>=0.6.0",
    "eth-rlp>=0.3.0,<0.4.0",
    "eth-utils>=2",
    "hexbytes<0.3.0",
    "jinja2>=2.9",
    "MarkupSafe<2.1.0",
    "mock",
    "numpy",
    "persistent>=4.2.0",
    "py-flags",
    "py-evm==0.7.0a1",
    "py-solc-x<2.0.0",
    "py-solc",
    "pyparsing<3,>=2.0.2",
    "requests",
    "rlp<4,>=3",
    "semantic_version",
    "scikit-learn",
    "transaction>=2.2.1",
    "z3-solver<=4.12.5.0,>=4.8.8.0",
    "matplotlib",
    "certifi>=2020.06.20",
    "setuptools<78",
]

[project.scripts]
myth = "mythril.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/ConsenSys/mythril"
Repository = "https://github.com/ConsenSys/mythril"
Documentation = "https://mythril-classic.readthedocs.io/en/develop/"

[dependency-groups]
dev = ["ruff", "ty", "pre-commit"]
test = ["pytest>=3.6.0", "pytest-mock", "pytest-cov", "pytest-timeout", "coverage>=6.0,<7.0", "tomli>=2.0; python_version < '3.11'"]
audit = ["pip-audit"]

[tool.setuptools.dynamic]
version = { attr = "mythril.__version__.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"mythril.analysis.templates" = ["*"]
"mythril.support.assets" = ["*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — no docstring enforcement for legacy codebase
    "ANN",     # flake8-annotations — no type annotation enforcement
    "ERA",     # eradicate — don't flag commented-out code
    "FIX",     # flake8-fixme — allow TODO/FIXME comments
    "TD",      # flake8-todos — allow TODO comments
    "T20",     # flake8-print — allow print statements
    "S",       # flake8-bandit — security linting too noisy for legacy code
    "PLR",     # pylint refactor — too many suggestions for legacy code
    "PLW",     # pylint warning — loop variable overwrites common in legacy
    "C90",     # mccabe complexity — legacy code has complex functions
    "FBT",     # flake8-boolean-trap — boolean args common in legacy code
    "ARG",     # flake8-unused-arguments — many callback signatures
    "TRY",     # tryceratops — exception handling patterns
    "EM",      # flake8-errmsg — string literal exceptions common
    "SLF",     # flake8-self — private member access common
    "RET",     # flake8-return — return style preferences
    "PTH",     # flake8-use-pathlib — os.path usage throughout
    "N",       # pep8-naming — naming conventions differ
    "UP",      # pyupgrade — gradual upgrade preferred
    "B",       # flake8-bugbear — too many false positives in legacy
    "SIM",     # flake8-simplify — simplification suggestions too noisy
    "PERF",    # perflint — performance suggestions too noisy
    "COM812",  # missing trailing comma — conflicts with formatter
    "ISC001",  # implicit string concatenation — conflicts with formatter
    "E501",    # line too long — ruff format handles code; comments/docstrings left as-is
    "E721",    # type comparison — uses == instead of isinstance in legacy
    "E722",    # bare except — common in legacy error handling
    "E741",    # ambiguous variable name — legacy naming
    "G",       # flake8-logging-format — legacy logging uses % and + formatting
    "A",       # flake8-builtins — legacy code shadows builtins (id, type, etc.)
    "BLE001",  # blind exception — common in legacy error handling
    "RUF001",  # ambiguous unicode — intentional en-dash in comments
    "RUF005",  # collection-literal-concatenation — breaks Constraints custom __add__
    "RUF012",  # mutable class default — common pattern in legacy
    "RUF013",  # implicit Optional — legacy type hints
    "PGH003",  # blanket type: ignore — legacy type suppression
    "PT015",   # assertion always fails — used intentionally for unreachable code
    "DTZ005",  # datetime without tz — legacy datetime usage
    "LOG015",  # root logger — legacy logging pattern
    "EXE001",  # shebang — not all files need it
    "EXE005",  # shebang position — legacy files
    "PYI024",  # typing — legacy patterns
    "PYI048",  # typing — legacy patterns
    "PYI001",  # private TypeVar naming — stubs
    "FURB116", # f-string for hex/bin/oct — legacy hex formatting patterns
    "INP001",  # implicit namespace package — docs/conf.py
    "PLE0302", # special method params — legacy override patterns
    "F403",    # wildcard imports — used in transaction __init__
    "TC",      # flake8-type-checking — moving imports to TYPE_CHECKING can break runtime
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ALL"]
"**/__init__.py" = ["F401"]  # re-exports in package init files
"mythril/laser/smt/__init__.py" = ["F811"]  # Bool method overrides in SymbolFactory subclasses
"mythril/mythril/__init__.py" = ["I001"]  # import order matters — circular import otherwise
"docs/source/conf.py" = ["E402"]  # sphinx conf requires imports after path setup

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
possibly-unresolved-reference = "ignore"
unresolved-reference = "ignore"
unresolved-import = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"
invalid-type-form = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
invalid-return-type = "ignore"
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"
call-non-callable = "ignore"
index-out-of-bounds = "ignore"
not-subscriptable = "ignore"
invalid-context-manager = "ignore"
unsupported-operator = "ignore"
invalid-raise = "ignore"
possibly-missing-implicit-call = "ignore"
redundant-cast = "ignore"
undefined-reveal = "ignore"
invalid-overload = "ignore"
invalid-type-variable-constraints = "ignore"
invalid-legacy-type-variable = "ignore"
invalid-method-override = "ignore"       # legacy detection modules override _execute with incompatible signatures
invalid-parameter-default = "ignore"     # legacy code uses None defaults without Optional annotation
no-matching-overload = "ignore"          # z3 type inference issues
unused-type-ignore-comment = "ignore"    # legacy type: ignore comments
deprecated = "ignore"                    # legacy stdlib usage (codecs.open, etc.)
useless-overload-body = "ignore"         # z3 stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --disable-pytest-warnings"

[tool.coverage.run]
source = ["mythril"]
omit = ["*__init__.py", "*_test.py"]

[tool.coverage.report]
omit = ["*__init__.py", "/usr/*", "*_test.py", "setup.py"]
